--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Programming Hero Github Repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
     
 </body>
+<div>
+    <h3> My first demo website</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil delectus beatae provident commodi molestias excepturi quas, quaerat voluptas fugiat doloremque quisquam alias repellat consectetur deleniti earum impedit omnis? Libero, nostrum.</p>
+</div>
 </html>
