added the second and third blog

--- a/index.html
+++ b/index.html
@@ -13,4 +13,13 @@
     <h3> My first demo website</h3>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil delectus beatae provident commodi molestias excepturi quas, quaerat voluptas fugiat doloremque quisquam alias repellat consectetur deleniti earum impedit omnis? Libero, nostrum.</p>
 </div>
+<div>
+    <h3> My second demo website</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil delectus beatae provident commodi molestias excepturi quas, quaerat voluptas fugiat doloremque quisquam alias repellat consectetur deleniti earum impedit omnis? Libero, nostrum.</p>
+</div>
+<div>
+    <h3> My third demo website</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil delectus beatae provident commodi molestias excepturi quas, quaerat voluptas fugiat doloremque quisquam alias repellat consectetur deleniti earum impedit omnis? Libero, nostrum.</p>
+</div>
+
 </html>
