added a list to push code

--- a/index.html
+++ b/index.html
@@ -22,4 +22,13 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil delectus beatae provident commodi molestias excepturi quas, quaerat voluptas fugiat doloremque quisquam alias repellat consectetur deleniti earum impedit omnis? Libero, nostrum.</p>
 </div>
 
+<div>
+    <h3>How to push incremental code</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"add a meaningful commit message</li>
+        <li>git push</li>
+    </ul>
+</div>
+
 </html>
